2007-08-01  Hector E. Gomez Morales <hectoregm@gmail.com> 

	* Monodoc.Editor.Gui/Test/TestUtils.cs: Added test units for GetLastTag
	  and AddString methods.
	* Monodoc.Editor.Gui/Utils.cs: Moving AddString, AddNewLine and
	  AddPadding methods to DocumentUtils helper class.

2007-07-16  Hector E. Gomez M. <hectoregm@gmail.com> 

	* Monodoc.Editor.Gui/DocumentTagTable.cs: Some comments about tags.
	* Monodoc.Editor.Gui/DocumentTab.cs: Minor changes, removed title
	  member.

2007-07-13  Hector E. Gomez M. <hectoregm@gmail.com> 

	* Monodoc.Editor.Gui/DocumentBufferArchiver.cs: Some code refactoring
	  around the Serialize method. Added two new methods to handle the
	  initialization of the two ArrayList: one list has all the tags that
	  begin in a given iterator and the second list has all the tags that
	  end in a given iterator.

2007-07-10  Hector E. Gomez M. <hectoregm@gmail.com> 

	* Monodoc.Editor.Gui/DocumentBufferArchiver.cs: Minor modifications
	* Monodoc.Editor.Gui/DocumentTagTable.cs: Made the "summary" tag
	  editable.

2007-07-09  Hector E. Gomez M. <hectoregm@gmail.com> 

	* Monodoc.Editor/EditorWindow.cs: Added event to close a document file.
	* Monodoc.Editor/gtk-gui/Monodoc.Editor.EditorWindow.cs,
	  Monodoc.Editor/gtk-gui/gui.stetic: Minor changes
	* Monodoc.Editor.Gui/DocumentTab.cs: Added a close button to the label
	  of each DocumentTab.

2007-07-09  Hector E. Gomez M. <hectoregm@gmail.com> 

	* Monodoc.Editor.Gui/DocumentBufferArchiver.cs: Stupid typo damn.

2007-07-07  Hector E. Gomez M. <hectoregm@gmail.com> 

	* Monodoc.Editor.Utils/EcmaReader.cs: Minor changes to deal with
	  compiler warnings.

2007-07-06  Hector E. Gomez Morales <hectoregm@gmail.com> 

	* Monodoc.Editor.Gui/DocumentBufferArchiver.cs: Added more comments to
	  code, and added more cases to format some elements.

2007-07-06  Hector E. Gomez Morales <hectoregm@gmail.com> 

	* Monodoc.Editor.Gui/DocumentBufferArchiver.cs: Added two new methods