@@ -36,6 +36,7 @@
     <File name="./EditAction.cs" subtype="Code" buildaction="Compile" />
     <File name="./Utils.cs" subtype="Code" buildaction="Compile" />
     <File name="./Test/TestUtils.cs" subtype="Code" buildaction="Compile" />
+    <File name="./Test/TestDocumentTagTable.cs" subtype="Code" buildaction="Compile" />
   </Contents>
   <References>
     <ProjectReference type="Gac" localcopy="True" refto="System, Version=1.0.5000.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" />
